--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "dependencies": {
     "axios": "^0.21.4",
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongoose": "^6.0.8"
+    "mongoose": "^6.0.8",
+    "passport": "^0.5.0",
+    "passport-jwt": "^4.0.0"
   },
   "name": "group-project-3-api",
   "description": "To Do List:",
