--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "node app.js",
+    "seed": "node initializeDatabase.js"
   },
   "repository": {
     "type": "git",
