--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
   "bugs": {
     "url": "https://github.com/CalClemmer/Group-Project-3-API/issues"
   },
-  "homepage": "https://github.com/CalClemmer/Group-Project-3-API#readme"
+  "homepage": "https://github.com/CalClemmer/Group-Project-3-API#readme",
+  "engines": {
+    "node": "v16.6.0"
+  }
 }
